UI List can freeze blender #37442

Closed
opened 2013-11-14 14:08:11 +01:00 by Alexander N. · 8 comments
Member

System Information
Windows 8.1 64bit,

Blender Version
Broken: Blender 2.69

Short description of error
the ui list (template_list) can freeze blender, when the list sits on a non-enabled layout and you try to re-size the list.

Exact steps for others to reproduce the error

  1. open attached blend file,
  2. run script
  3. try to enlarge the size of the list on the property panel on the right.
    ... blender freeze

issue_UI_List_freeze_blender.blend

issue_UI_List_freeze_blender.PNG

issue_UI_List_freeze_blender.mp4

**System Information** Windows 8.1 64bit, **Blender Version** Broken: Blender 2.69 **Short description of error** the ui list (template_list) can freeze blender, when the list sits on a non-enabled layout and you try to re-size the list. **Exact steps for others to reproduce the error** 1. open attached blend file, 2. run script 3. try to enlarge the size of the list on the property panel on the right. ... blender freeze [issue_UI_List_freeze_blender.blend](https://archive.blender.org/developer/F27169/issue_UI_List_freeze_blender.blend) ![issue_UI_List_freeze_blender.PNG](https://archive.blender.org/developer/F27170/issue_UI_List_freeze_blender.PNG) [issue_UI_List_freeze_blender.mp4](https://archive.blender.org/developer/F27178/issue_UI_List_freeze_blender.mp4)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @beta-tester

Added subscriber: @beta-tester

Added subscriber: @mont29

Added subscriber: @mont29

Confirmed, will assign to myself asap...

Confirmed, will assign to myself asap...
Bastien Montagne self-assigned this 2013-11-14 17:01:58 +01:00

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit d49498a461.

Closed by commit d49498a461.

This issue was referenced by blender/blender-addons-contrib@d49498a461

This issue was referenced by blender/blender-addons-contrib@d49498a4612993b7821e62d5267e22b99f781b92

This issue was referenced by d49498a461

This issue was referenced by d49498a4612993b7821e62d5267e22b99f781b92
Sign in to join this conversation.
3 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#37442
No description provided.