Fix T37442: Disabled uiList would "freeze" Blender when trying to drag-resize it.

For now, simply disable drag-resize for disabled uiLists!